frontend/css/style.scss
@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700');
@import url('https://fonts.googleapis.com/css?family=Oswald:300,400,500');

$mainColor: #F7F7F7;
$colorRed: #EB1C23;
$colorGrey: #535558;
$colorLightGrey: #BDBDBD;
$colorBlue: #7485c5;
$colorRose: #F4CBC6;

$headingFont: 'Oswald', sans-serif;
$mainFont: 'Open Sans', sans-serif;

@import 'reset';
@import 'auth';
@import 'welcome-section';
@import 'about';
@import 'templates';
@import 'table';
@import 'my-surveys';
@import 'survey-editing';
@import 'range';
@import 'bar-chart';

html {
    height: 100%;
}

body {
    min-height: 100%;
    height: auto;
    background-color: $mainColor;
    font-family: $mainFont;
    font-size: 18px;
    position: relative;
}

.header {
    background-color: white;
    font-size: 20px;
    font-family: $headingFont;
    letter-spacing: 0.4px;
    box-shadow: 0px 3px 25.52px 3.48px rgba(112, 112, 112, 0.1);
}

.head {
    height: 50px;
    display: flex;
    justify-content: space-around;
    align-items: center;

    .head__logo {
        margin: 40px 35px 15px 4.5%;
        width: 100%;
        flex-grow: 2;
    }

    .head__auth { 
        flex-grow: 1;
        display: flex;
        margin: 40px 3.5% 0 35px;
        list-style-type: none;
        font-size: 20px;
        
        .head__auth_signin, 
        .head__auth_signup {
            text-decoration: none;
            color: lighten($colorGrey, 20%);
            padding: 0 20px;
        }
        .head__auth_signin:hover, 
        .head__auth_signup:hover{
            color: $colorLightGrey;
        }
        .head__auth_signin {
            border-right: 1px solid $colorLightGrey;
        }
    }
}

.menu-container {
    height: 56px;
    display: flex;
    flex-wrap: nowrap;
    justify-content: center;
    border-bottom: 3px solid $colorRed;

    input {
        position: absolute;
        top: -9999px;
        left: -9999px;
    }

    .menu__hamburger { 
        display:none;
        cursor: pointer;
        user-select:none;
    }
}

.menu {
    height: 56px;
    background-color: $colorRed;
    list-style-type: none;
    display: flex;
    align-items: center;
    margin: 0 3.5%;
    position: relative;
    top: 50%;
    z-index: 100;
    box-shadow: 0px 3px 25.52px 3.48px rgba(112, 112, 112, 0.2);

    .menu__item {
        text-decoration: none;
        color: white;
        padding: 13px 60px 7px 60px;
        flex-grow: 1;
        line-height: 2;
    }
}

.menu_left {
    justify-content: flex-start;
    flex-grow: 3;

    .menu__item:hover, .menu__item:active {
        border-bottom: 6px solid desaturate(darken($colorRed, 10%), 10%);
    }
}

.content {
   width: 100%;
}

.content_flex {
    display: flex;
    justify-content: center;
}

.content_white {
    background-color: white;
}

.content_centered {
    margin: 70px 15px 100px 15px;
    background-color: white;
    width: 1100px;
    box-shadow: 0px 3px 25.52px 3.48px rgba(112, 112, 112, 0.29);
}

.search-bar {
    height: 50px;
    color: darken($colorLightGrey, 20%);
    font-family: $mainFont;
    font-size: 18px;
    border: 2px solid $colorLightGrey;
    border-radius: 25px;
    padding-left: 60px;
}

.triangle-down {
    width: 0;
	height: 0;
    display: inline-block;
	border-left: 7px solid transparent;
	border-right: 7px solid transparent;
	border-top: 10px solid $colorGrey;
}

.triangle-up {
    width: 0;
	height: 0;
    display: inline-block;
	border-left: 7px solid transparent;
	border-right: 7px solid transparent;
	border-bottom: 10px solid $colorGrey;
}

.triangle-right {
    width: 0;
	height: 0;
    display: inline-block;
	border-top: 7px solid transparent;
	border-left: 10px solid $colorGrey;
	border-bottom: 7px solid transparent;
}

.triangle-left {
    width: 0;
	height: 0;
    display: inline-block;
	border-top: 7px solid transparent;
	border-right: 10px solid ;
	border-bottom: 7px solid transparent;
}

.operations-bar {
    margin: 70px 4% 5% 4%;
    padding-bottom: 30px;;
    display: flex;
    justify-content: space-around;
    align-items: center;
    position: relative;

    .fa-search {
        font-size: 25px;
        color: darken($colorLightGrey, 10%);
        position: absolute;
        left: 20px;
    }

    .operations-bar__search {
        width: 90%;
        margin-right: 10%;
        background-color: transparent;
        color: $colorLightGrey;
        flex-flow: 2;
    }

    .operations-bar__new-template {
        height: 50px;
        width: 240px;
        flex-flow: 1;
        font-family: $mainFont;
        font-size: 17px;
        color: white;
        border: none;
        border-radius: 3px;
        background-color: $colorBlue;
        margin-right: 50px;
        padding: 5px;
        i {
            font-size: 22px;
            padding: 5px;
            position: relative;
            top: 2px;;
        }
    }
    .operations-bar__new-template:hover {
        cursor: pointer;
        background-color: darken($colorBlue, 10%);
    }
}

.operations-bar_survey-list {
    margin: 70px 0 0 0;

    .operations-bar__new-template_right {
        margin-right: 0;
    }
}

.users {
    margin: 30px 0 0 0;
    padding-bottom: 23px;
}

.footer {
    height: 50px;
    width: 100%;
    background-color: $colorGrey;
    color: white;
    font-size: 14px;
    letter-spacing: 0.8px;
    display: flex;
    align-items: center;
    justify-content: center;
    position: absolute;
    bottom: 0;
    box-shadow: 0px 3px 25.52px 3.48px rgba(112, 112, 112, 0.2);
}

.content-filler {
    height: 300px;
    background-color: $mainColor;
    padding-bottom: 50px;
}

@media all and (max-width: 1010px) {
  .menu {
    flex-direction: column;

    li {
        width: 100%;
        text-align: center;
        background-color: $colorRed;
        &:hover, &:active {
            background-color: darken($colorRed, 10%);
        }
        display: none;
    }

    .menu__item:hover, .menu__item:active {
        border-bottom: none;
    }

    .menu__hamburger {
        display: block;
        color: white;
        font-size: 35px;
    }

    input:checked ~ li {
        display: block;
        font-size: 45px;
    }    
  }
}

